# Person_Of_Interest_Project

./: README.md  config.yaml  gallery.html  mkdocs.yml  pyproject.toml  run_app.py
.streamlit/: config.toml
data/: index_meta.parquet  index_vectors.npy
docs/: index.md
docs/notebooks/: supportvectors-common.ipynb
src/: ad_poi.py  face_search.py  test_setup.py
