[project]
name = "person-of-interest-project"
version = "0.1.0"
description = "Find a celebrity image by a description"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "svlearn-bootcamp>=0.1.7",
    "sentence-transformers>=2.6",
    "datasets>=2.20",
    "pillow>=10.0"           # images (PIL) if you load/resize pictures
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

# If you also build sdists and want data included:
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    # ... other includes like README, pyproject.toml, etc.
]

[tool.hatch.build.targets.wheel]
packages = ["src/Image_Search"]

